--- a/todo.org
+++ b/todo.org
@@ -1,16 +1,15 @@
 #+title: Code ToDo
 
 * [ ] UI protocol
-** [ ] In-memory bidirectional stream implementation for TUI
-** [ ] General requirements
-- Send initial configuration: available tools, their node configuration, etc.
+** [X] In-memory bidirectional stream implementation for TUI
+** [X] General requirements
 - Stream state change messages
-- RPC subprotocol for various helpers
-  - Request user input and provide response
-  - Tab-based autocompletion
-  - Send ctrl+c
-** [ ] Clearly defined spec
-** [ ] Websockets implementation
+* [ ] Terminal UI
+** [ ] Add logging
+** [ ] Fix intermediate response streaming
+** [ ] Remove (or disable) prompt when input is not requested
+** [ ] Fix prompt display - it's not visible after output
+** [ ] Fix prompt text, it's not showing correct current node or requested text
 * [ ] Figure out dependency graph between project, tools
 * [ ] Graph
 ** [X] Rename output to be outcome
