--- a/todo.org
+++ b/todo.org
@@ -77,6 +77,7 @@
 *** [X] Base parser
 *** [ ] Add a way to write file changes after confirmation
 *** [ ] Tell Know that files were updated and project needs to be updated
+*** [ ] Handle all kind of errors - mismatched chunks, etc
 ** [ ] Create RepoMap node - call into Know with provided prompt
 ** [ ] Create documentation node - read AGENT.md files for all paths that are mentioned in previous messages.
 - Have configuration for static message text
