--- a/todo.org
+++ b/todo.org
@@ -12,8 +12,8 @@
 - Patch node failing and going back to coder should persist coder state and append patch error
 ** [X] Figure out why final messages can be duplicated sometimes
 ** [ ] Move replace last message logic to UIState
-** [ ] Add VIM mode
-** [ ] Add multi-line input
+** [X] Add VIM mode
+** [X] Add multi-line input
 ** [ ] Add a flag to not show node output in the UI. Useful for input node, etc
 * [ ] Configuration
 ** [ ] Redo include file syntax to include section with default variable values
@@ -58,7 +58,6 @@ Concrete example: files that were read and already in context.
 *** [X] GPT V4A diff format
 **** [X] Better error reporting and verify apply patch cycle
 *** [ ] Fenced diff format
-*** [ ] Full file diff format
 * [X] Settings
 ** [X] Settings loader
 * [ ] Chat state
